--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-2.44MB/s(Youtube:不良林), server: fhcamd2.gaox.ml, port: 443, type: trojan, password: dbf9bf9c-2c3f-474a-8031-d4c00666a989, sni: fhcamd2.gaox.ml, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-17.30MB/s(Youtube:不良林), server: 36.139.154.162, port: 45149, type: vmess, uuid: 25066212-3c68-4f60-9845-80632aa27a20, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 36.139.154.162}}
-  - {name: 🇯🇵 日本-318.1KB/s(Youtube:不良林), server: jgwdb1.gaox.ml, port: 443, type: trojan, password: a580d839-ee41-4df1-bf03-6789dca32e30, sni: jgwdb1.gaox.ml, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-2.69MB/s(Youtube:不良林), server: 185.167.116.250, port: 9041, type: ss, cipher: aes-256-cfb, password: U6qnYRhfyDmn8sgn}
-  - {name: 🇺🇸 美国-5.60MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-3.68MB/s(Youtube:不良林), server: usyy.884899.cf, port: 443, type: trojan, password: 2debb06b-95ce-4e9b-956a-6cf7cadac30c, sni: usyy.884899.cf, skip-cert-verify: true}
+  - {name: 🇩🇪 德国-500.6KB/s(Youtube:不良林), server: 49.12.203.80, port: 40960, type: ss, cipher: aes-256-gcm, password: 6kA7b3f9Aw2508erQ3W7D4}
+  - {name: 🇫🇷 法国-2.58MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
+  - {name: 🇺🇸 美国-1.11MB/s(Youtube:不良林), server: 95.169.4.174, port: 254, type: ss, cipher: aes-256-cfb, password: bwhskrskr06}
+  - {name: 🇺🇸 美国-3.66MB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
   - {name: 🇯🇵 日本-8.01MB/s(Youtube:不良林), server: jgwdj3.gaox.ml, port: 443, type: trojan, password: da777aae-defb-41d0-a183-2c27da2b4677, sni: jgwdj3.gaox.ml, skip-cert-verify: true}
   - {name: 🇺🇸 美国-3.16MB/s(Youtube:不良林), server: usfree2.jiantian.xyz, port: 32462, type: trojan, password: cb5e2135-4d64-4454-be98-5bae4f2618d1, sni: usfree2.jiantian.xyz, skip-cert-verify: true}
   - {name: 🇺🇸 美国-4.61MB/s(Youtube:不良林), server: jgwdb2.gaox.ml, port: 443, type: trojan, password: c19d1432-8b3e-4818-8837-3d160cf65908, sni: jgwdb2.gaox.ml, skip-cert-verify: true}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-2.44MB/s(Youtube:不良林)
-      - 🇨🇳 中国-17.30MB/s(Youtube:不良林)
-      - 🇯🇵 日本-318.1KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.69MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.60MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.68MB/s(Youtube:不良林)
+      - 🇩🇪 德国-500.6KB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.58MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.66MB/s(Youtube:不良林)
       - 🇯🇵 日本-8.01MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.16MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.61MB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-2.44MB/s(Youtube:不良林)
-      - 🇨🇳 中国-17.30MB/s(Youtube:不良林)
-      - 🇯🇵 日本-318.1KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.69MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.60MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.68MB/s(Youtube:不良林)
+      - 🇩🇪 德国-500.6KB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.58MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.66MB/s(Youtube:不良林)
       - 🇯🇵 日本-8.01MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.16MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.61MB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-2.44MB/s(Youtube:不良林)
-      - 🇨🇳 中国-17.30MB/s(Youtube:不良林)
-      - 🇯🇵 日本-318.1KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.69MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.60MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.68MB/s(Youtube:不良林)
+      - 🇩🇪 德国-500.6KB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.58MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.66MB/s(Youtube:不良林)
       - 🇯🇵 日本-8.01MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.16MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.61MB/s(Youtube:不良林)
@@ -72,11 +72,11 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-2.44MB/s(Youtube:不良林)
-      - 🇨🇳 中国-17.30MB/s(Youtube:不良林)
-      - 🇯🇵 日本-318.1KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.69MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.60MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.68MB/s(Youtube:不良林)
+      - 🇩🇪 德国-500.6KB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.58MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.66MB/s(Youtube:不良林)
       - 🇯🇵 日本-8.01MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.16MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.61MB/s(Youtube:不良林)
@@ -87,11 +87,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-2.44MB/s(Youtube:不良林)
-      - 🇨🇳 中国-17.30MB/s(Youtube:不良林)
-      - 🇯🇵 日本-318.1KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.69MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.60MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.68MB/s(Youtube:不良林)
+      - 🇩🇪 德国-500.6KB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.58MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.66MB/s(Youtube:不良林)
       - 🇯🇵 日本-8.01MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.16MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.61MB/s(Youtube:不良林)
@@ -103,11 +103,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-2.44MB/s(Youtube:不良林)
-      - 🇨🇳 中国-17.30MB/s(Youtube:不良林)
-      - 🇯🇵 日本-318.1KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.69MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.60MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.68MB/s(Youtube:不良林)
+      - 🇩🇪 德国-500.6KB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.58MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.66MB/s(Youtube:不良林)
       - 🇯🇵 日本-8.01MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.16MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.61MB/s(Youtube:不良林)
@@ -128,11 +128,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-2.44MB/s(Youtube:不良林)
-      - 🇨🇳 中国-17.30MB/s(Youtube:不良林)
-      - 🇯🇵 日本-318.1KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.69MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.60MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.68MB/s(Youtube:不良林)
+      - 🇩🇪 德国-500.6KB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.58MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.66MB/s(Youtube:不良林)
       - 🇯🇵 日本-8.01MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.16MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.61MB/s(Youtube:不良林)
