--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,114 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇦 加拿大-3.68MB/s(Youtube:不良林), server: usyy.884899.cf, port: 443, type: trojan, password: 2debb06b-95ce-4e9b-956a-6cf7cadac30c, sni: usyy.884899.cf, skip-cert-verify: true}
-  - {name: 🇩🇪 德国-500.6KB/s(Youtube:不良林), server: 49.12.203.80, port: 40960, type: ss, cipher: aes-256-gcm, password: 6kA7b3f9Aw2508erQ3W7D4}
-  - {name: 🇫🇷 法国-2.58MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
+  - {name: 🇦🇺 澳大利亚-2.75MB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-5.29MB/s(Youtube:不良林), server: jgwdb4.gaox.ml, port: 443, type: trojan, password: d06a3f01-1ff0-4792-9b8e-a5a604bc74a2, sni: jgwdb4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇫🇷 法国-1.55MB/s(Youtube:不良林), server: 51.38.118.42, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇨🇦 加拿大-3.56MB/s(Youtube:不良林), server: usyy.884899.cf, port: 443, type: trojan, password: 2debb06b-95ce-4e9b-956a-6cf7cadac30c, sni: usyy.884899.cf, skip-cert-verify: true}
   - {name: 🇺🇸 美国-1.11MB/s(Youtube:不良林), server: 95.169.4.174, port: 254, type: ss, cipher: aes-256-cfb, password: bwhskrskr06}
-  - {name: 🇺🇸 美国-3.66MB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-8.01MB/s(Youtube:不良林), server: jgwdj3.gaox.ml, port: 443, type: trojan, password: da777aae-defb-41d0-a183-2c27da2b4677, sni: jgwdj3.gaox.ml, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-3.16MB/s(Youtube:不良林), server: usfree2.jiantian.xyz, port: 32462, type: trojan, password: cb5e2135-4d64-4454-be98-5bae4f2618d1, sni: usfree2.jiantian.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-4.61MB/s(Youtube:不良林), server: jgwdb2.gaox.ml, port: 443, type: trojan, password: c19d1432-8b3e-4818-8837-3d160cf65908, sni: jgwdb2.gaox.ml, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-3.28MB/s(Youtube:不良林), server: usfree1.jiantian.xyz, port: 23425, type: trojan, password: 27e58714-2c0b-4fa4-afb6-b91ec041b1cf, sni: usfree1.jiantian.xyz, skip-cert-verify: true}
-  - {name: 🇮🇳 印度-2.25MB/s(Youtube:不良林), server: jgwhdlb2.gaox.ml, port: 443, type: trojan, password: 54080134-2cba-4535-8599-95650bd9aa54, sni: jgwhdlb2.gaox.ml, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-3.99MB/s(Youtube:不良林), server: 89.31.126.225, port: 802, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇺🇸 美国-1.06MB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 22168, type: trojan, password: 685022af-2086-454c-8725-8ff6b6ab1d13, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-3.12MB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 50858, type: trojan, password: 685022af-2086-454c-8725-8ff6b6ab1d13, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-1.39MB/s(Youtube:不良林), server: zlaz1.portxray.xyz, port: 443, type: trojan, password: 08ce97bf-e053-40e3-9282-58af3592f32e, sni: zlaz1.portxray.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 台湾-10.80MB/s(Youtube:不良林), server: ntw02.vsvideo.live, port: 25634, type: trojan, password: a2a37460-2a05-3211-b0d6-d0b37971f84e, sni: ntw02.vsvideo.live, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-3.68MB/s(Youtube:不良林)
-      - 🇩🇪 德国-500.6KB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.58MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.75MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.29MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.55MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.56MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.66MB/s(Youtube:不良林)
-      - 🇯🇵 日本-8.01MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.16MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.61MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.28MB/s(Youtube:不良林)
-      - 🇮🇳 印度-2.25MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.99MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.12MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.39MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-10.80MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇦 加拿大-3.68MB/s(Youtube:不良林)
-      - 🇩🇪 德国-500.6KB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.58MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.75MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.29MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.55MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.56MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.66MB/s(Youtube:不良林)
-      - 🇯🇵 日本-8.01MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.16MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.61MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.28MB/s(Youtube:不良林)
-      - 🇮🇳 印度-2.25MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.99MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.12MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.39MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-10.80MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-3.68MB/s(Youtube:不良林)
-      - 🇩🇪 德国-500.6KB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.58MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.75MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.29MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.55MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.56MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.66MB/s(Youtube:不良林)
-      - 🇯🇵 日本-8.01MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.16MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.61MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.28MB/s(Youtube:不良林)
-      - 🇮🇳 印度-2.25MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.99MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.12MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.39MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-10.80MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇨🇳 台湾-10.80MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇦 加拿大-3.68MB/s(Youtube:不良林)
-      - 🇩🇪 德国-500.6KB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.58MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.75MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.29MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.55MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.56MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.66MB/s(Youtube:不良林)
-      - 🇯🇵 日本-8.01MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.16MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.61MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.28MB/s(Youtube:不良林)
-      - 🇮🇳 印度-2.25MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.99MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.12MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.39MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-10.80MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-3.68MB/s(Youtube:不良林)
-      - 🇩🇪 德国-500.6KB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.58MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.75MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.29MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.55MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.56MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.66MB/s(Youtube:不良林)
-      - 🇯🇵 日本-8.01MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.16MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.61MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.28MB/s(Youtube:不良林)
-      - 🇮🇳 印度-2.25MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.99MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.12MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.39MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-10.80MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-3.68MB/s(Youtube:不良林)
-      - 🇩🇪 德国-500.6KB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.58MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.75MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.29MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.55MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.56MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.66MB/s(Youtube:不良林)
-      - 🇯🇵 日本-8.01MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.16MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.61MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.28MB/s(Youtube:不良林)
-      - 🇮🇳 印度-2.25MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.99MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.12MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.39MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-10.80MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-3.68MB/s(Youtube:不良林)
-      - 🇩🇪 德国-500.6KB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.58MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.75MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.29MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.55MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.56MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.66MB/s(Youtube:不良林)
-      - 🇯🇵 日本-8.01MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.16MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.61MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.28MB/s(Youtube:不良林)
-      - 🇮🇳 印度-2.25MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.99MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.12MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.39MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-10.80MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
