--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,114 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇩🇪 德国-3.25MB/s(Youtube:不良林), server: mosaic.marythunt.xyz, port: 443, type: trojan, password: !<str> 372815193, sni: mosaic.marythunt.xyz, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-2.60MB/s(Youtube:不良林), server: 185.167.116.250, port: 9019, type: ss, cipher: aes-256-cfb, password: GA9KzeEgvfxNrgmM}
-  - {name: 🇺🇸 美国-1.21MB/s(Youtube:不良林), server: azhj001.xiba1.xyz, port: 20720, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azhj001.xiba1.xyz, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-2.18MB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇮🇳 印度-897.7KB/s(Youtube:不良林), server: jgwhdlb1.gaox.ml, port: 443, type: trojan, password: e05c749b-7c6b-41b8-9c71-9dcf685edf4a, sni: jgwhdlb1.gaox.ml, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-2.07MB/s(Youtube:不良林), server: 150.230.43.106, port: 54829, type: vmess, uuid: f2b5c3ff-86c7-4efa-831f-ff0fcd7656a5, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-3.55MB/s(Youtube:不良林), server: 20.123.187.212, port: 27931, type: vmess, uuid: 256eae41-0b8f-4faa-bce8-6366011dc19f, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-419.7KB/s(Youtube:不良林), server: 89.31.126.171, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇺🇸 美国-343.1KB/s(Youtube:不良林), server: jgwcc3.gaox.ml, port: 443, type: trojan, password: b291d129-ee55-4801-a9b8-b5316e5c37b7, sni: jgwcc3.gaox.ml, skip-cert-verify: true}
+  - {name: 🇭🇰 香港-201.7KB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20710, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-3.67MB/s(Youtube:不良林), server: trojan2.udpgw.com, port: 443, type: trojan, password: 973ef350-f6a5-11ec-9274-1239d0255272, sni: trojan2.udpgw.com, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-5.14MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
   - {name: 🇰🇷 韩国-3.36MB/s(Youtube:不良林), server: kr04.wangxd.life, port: 3052, type: trojan, password: 3a2c0c6c-9ee5-c05f-c951-fcd73831983e, sni: kr04.wangxd.life, skip-cert-verify: true}
   - {name: 🇺🇸 美国-5.06MB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 22168, type: trojan, password: 685022af-2086-454c-8725-8ff6b6ab1d13, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
   - {name: 🇺🇸 美国-5.36MB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 48240, type: trojan, password: 685022af-2086-454c-8725-8ff6b6ab1d13, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-5.19MB/s(Youtube:不良林), server: jgwdb1.gaox.ml, port: 443, type: trojan, password: a580d839-ee41-4df1-bf03-6789dca32e30, sni: jgwdb1.gaox.ml, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-2.49MB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇩🇪 德国-3.25MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.60MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.21MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.18MB/s(Youtube:不良林)
-      - 🇮🇳 印度-897.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.07MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.55MB/s(Youtube:不良林)
+      - 🇯🇵 日本-419.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-343.1KB/s(Youtube:不良林)
+      - 🇭🇰 香港-201.7KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.67MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.14MB/s(Youtube:不良林)
       - 🇰🇷 韩国-3.36MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.06MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.36MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.19MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.49MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇩🇪 德国-3.25MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.60MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.21MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.18MB/s(Youtube:不良林)
-      - 🇮🇳 印度-897.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.07MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.55MB/s(Youtube:不良林)
+      - 🇯🇵 日本-419.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-343.1KB/s(Youtube:不良林)
+      - 🇭🇰 香港-201.7KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.67MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.14MB/s(Youtube:不良林)
       - 🇰🇷 韩国-3.36MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.06MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.36MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.19MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.49MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇩🇪 德国-3.25MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.60MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.21MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.18MB/s(Youtube:不良林)
-      - 🇮🇳 印度-897.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.07MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.55MB/s(Youtube:不良林)
+      - 🇯🇵 日本-419.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-343.1KB/s(Youtube:不良林)
+      - 🇭🇰 香港-201.7KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.67MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.14MB/s(Youtube:不良林)
       - 🇰🇷 韩国-3.36MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.06MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.36MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.19MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.49MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇭🇰 香港-201.7KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇩🇪 德国-3.25MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.60MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.21MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.18MB/s(Youtube:不良林)
-      - 🇮🇳 印度-897.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.07MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.55MB/s(Youtube:不良林)
+      - 🇯🇵 日本-419.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-343.1KB/s(Youtube:不良林)
+      - 🇭🇰 香港-201.7KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.67MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.14MB/s(Youtube:不良林)
       - 🇰🇷 韩国-3.36MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.06MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.36MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.19MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.49MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇩🇪 德国-3.25MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.60MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.21MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.18MB/s(Youtube:不良林)
-      - 🇮🇳 印度-897.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.07MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.55MB/s(Youtube:不良林)
+      - 🇯🇵 日本-419.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-343.1KB/s(Youtube:不良林)
+      - 🇭🇰 香港-201.7KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.67MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.14MB/s(Youtube:不良林)
       - 🇰🇷 韩国-3.36MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.06MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.36MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.19MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.49MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇩🇪 德国-3.25MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.60MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.21MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.18MB/s(Youtube:不良林)
-      - 🇮🇳 印度-897.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.07MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.55MB/s(Youtube:不良林)
+      - 🇯🇵 日本-419.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-343.1KB/s(Youtube:不良林)
+      - 🇭🇰 香港-201.7KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.67MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.14MB/s(Youtube:不良林)
       - 🇰🇷 韩国-3.36MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.06MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.36MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.19MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.49MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇩🇪 德国-3.25MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.60MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.21MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.18MB/s(Youtube:不良林)
-      - 🇮🇳 印度-897.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.07MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.55MB/s(Youtube:不良林)
+      - 🇯🇵 日本-419.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-343.1KB/s(Youtube:不良林)
+      - 🇭🇰 香港-201.7KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.67MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.14MB/s(Youtube:不良林)
       - 🇰🇷 韩国-3.36MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.06MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.36MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.19MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.49MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
